log
Thu, Mar 20, 2025 11:09:17 PM: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|4
total_score: 10/70
3f6cb15
Thu, Mar 20, 2025 11:12:53 PM: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
bf4eb2a
Fri, Mar 21, 2025 11:02:09 AM: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
c246881
Fri, Mar 21, 2025 11:38:02 AM: 
 exercises.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:118:60: error: comparison between pointer and integer [-Werror]
       if(cadena[i] == '(' || cadena[i] == '{' || cadena[i] == "[" ){
                                                            ^~
exercises.c:118:60: error: comparison with string literal results in unspecified behavior [-Werror=address]
In file included from test.c:5:0:
exercises.c:133:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
3129fde
